# daide-client

./: .gitignore  CMakeLists.txt  aiclient-8~2-conditions-of-use.htm  aiclient-8~2-release-notice.htm  conditions-of-use.htm  conditions-of-use.txt  copyright.txt  release-notice.htm
AiClient/: AiClient.aps  AiClient.cpp  AiClient.dsp  AiClient.dsw  AiClient.h  AiClient.ncb  AiClient.opt  AiClient.plg  AiClient.rc  AiClient.sln  AiClient.vcxproj  AiClient.vcxproj.filters  AiClientTypes.h  BaseBot.cpp  BaseBot.h  JPN_Socket.cpp  JPN_Socket.h  JPN_String.cpp  JPN_String.h  Resource.h  adjudicator.cpp  badlog.txt  biglog.txt  error_log.cpp  error_log.h  map_and_units.cpp  map_and_units.h  stdafx.cpp  stdafx.h  token_message.cpp  token_message.h  token_text_map.cpp  token_text_map.h  tokens.h  types.h
Extras/BaseBot/: Bot_Type.h
Extras/DumbBot/: Bot_Type.h  DumbBot.cpp  DumbBot.h
Extras/HoldBot/: Bot_Type.h  HoldBot.cpp  HoldBot.h
Extras/RandBot/: Bot_Type.h  DumbBot 2~2.opensdf  RandBot.cpp  RandBot.h
bots/albert/: COPYRIGHT
bots/basebot/: CMakeLists.txt  basebot.cpp  basebot.h  bot_type.h
bots/dumbbot/: CMakeLists.txt  bot_type.h  dumbbot.cpp  dumbbot.h
bots/holdbot/: CMakeLists.txt  bot_type.h  holdbot.cpp  holdbot.h
bots/randbot/: CMakeLists.txt  bot_type.h  randbot.cpp  randbot.h
daide_client/: adjudicator.cpp  ai_client.cpp  ai_client.h  ai_client_types.h  base_bot.cpp  base_bot.h  bot_type.h  error_log.cpp  error_log.h  main.cpp  map_and_units.cpp  map_and_units.h  resource.h  socket.cpp  socket.h  stdafx.h  string.cpp  string.h  token_message.cpp  token_message.h  token_text_map.cpp  token_text_map.h  tokens.h  types.h  windaide_symboles.cpp  windaide_symboles.h  windaide_symbols.cpp  windaide_symbols.h
